# talking-to-machines

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
demos/: prompt_template.xlsx  public_good_experiment_prompt_template.xlsx  public_good_experiment_prompt_template_sample.xlsx  reducing_political_polarisation_demo.ipynb
demos/archive/: ash_replication_prompt_template_T0.xlsx  ash_replication_prompt_template_T1.xlsx  ash_replication_prompt_template_demo_v1.xlsx  ash_replication_prompt_template_demo_v2.xlsx  bail_replication_prompt_template_guncontrol_control.xlsx  bail_replication_prompt_template_guncontrol_demo_v1.xlsx  bail_replication_prompt_template_guncontrol_treatment.xlsx  bail_replication_prompt_template_immigration_control.xlsx  bail_replication_prompt_template_immigration_treatment.xlsx  candor_wave_2_prompts_template.xlsx  reducing_political_polarisation_guncontrol_control.csv  reducing_political_polarisation_guncontrol_treatment.csv  reducing_political_polarisation_immigration_control.csv  reducing_political_polarisation_immigration_treatment.csv
demos/public_good_experiment/: public_good_experiment.md  public_good_experiment_prompt_template.xlsx
demos/rct_experiment/: rct_experiment_prompt_template.xlsx  ~$rct_experiment_prompt_template.xlsx
docs/source/: conf.py  talkingtomachines.interface.rst  talkingtomachines.rst
talkingtomachines/: cli.py  config.py
talkingtomachines/analytics/: analysis.py  processing.py  visualisation.py
talkingtomachines/generative/: llm.py  prompt.py  synthetic_agent.py  synthetic_subject.py
talkingtomachines/interface/: README.md  initialize_experiment.py  prompt_template.py  validate_template.py
talkingtomachines/management/: experiment.py  initialize_experiment.py  treatment.py
talkingtomachines/storage/: experiment.py
tests/: test_experiment.py  test_llm.py  test_openrouter_support.py  test_synthetic_agent.py  test_treatment.py
tests/storage/experiment/: 20240821_214439.json  20240821_214658.json  20240821_214921.json
