# ─── Build system ─────────────────────────────────────────────────────────────
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Project metadata ─────────────────────────────────────────────────────────
[project] 
name = "talkingtomachines" 
version = "0.2.2" 
description = "A python package for conducting AI-AI experiments for social science research." 
readme = {file = "README.md", content-type = "text/markdown"} 
requires-python = ">=3.10" 
license = {file = "LICENSE"}
authors = [
  { name = "Raymond Low", email = "raymond.low@nuffield.ox.ac.uk" },
  { name = "Raymond Duch", email = "raymond.duch@nuffield.ox.ac.uk" },
  { name = "Tommaso Batistoni", email = "tommaso.batistoni@nuffield.ox.ac.uk" },
]
dependencies = [
  "click>=8.0.0",
  "python-dotenv==0.10.2",
  "pandas>=2.2",
  "numpy==2.2.5",
  "requests==2.32.3",
  "scikit-learn==1.6.1", 
  "nltk==3.8.1",
  "openai>=1.37,<2",
  "openpyxl>=3.1.5",
  "Jinja2==3.0.0",
  "httpx<0.28",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/talking-to-machines/talking-to-machines"

[tool.setuptools.packages.find]
where = ["."]
include = ["talkingtomachines*"]  # the real library & its subpackages
exclude = ["demos*", "storage*", "experiment_results*"]  # examples / data folders, not code

[project.scripts]
talkingtomachines = "talkingtomachines.cli:main"